# rag_engine

./: .gitignore  README.md  app.py  ask.py  build_rag.py  pyproject.toml  rag_query.py  requirements.txt
eval/: questions.json
hermes/: SKILL.md
rag/: __init__.py  backfill_collections.py  config.py  eval_run.py  ingest.py  query.py  reindex_loop.py  text.py
rag_engine/: __init__.py  backfill_collections.py  cli.py  config.py  eval_run.py  events.py  ingest.py  lock.py  query.py  reindex_loop.py  scopes.yaml
